# Deep-Coder

./: .gitignore  AGENTS.md  CLAUDE.md  DEEP.md  LICENSE  README.md  agentLoop.py  deepcode  pyproject.toml  requirements.txt
arch/: arch.md
deep_coder/: __init__.py  cli.py  config.py  main.py
deep_coder/context/: __init__.py  manager.py  records.py  session.py
deep_coder/harness/: __init__.py  base.py  events.py  result.py  turn_runner.py  turn_subprocess.py
deep_coder/models/: __init__.py  base.py
deep_coder/projects/: __init__.py  deepfile.py  registry.py
deep_coder/prompts/: __init__.py  base.py
deep_coder/skills/: __init__.py  models.py  registry.py
deep_coder/tasks/: __init__.py  manager.py
deep_coder/tools/: __init__.py  base.py  registry.py  result.py
deep_coder/tui/: __init__.py  app.py  render.py  styles.tcss
docs/history/: 2026-03-25-deep-coder-backend-runtime-history.md  2026-03-26-deepseek-tool-call-resume-fix-history.md  2026-03-26-harness-backend-tui-history.md  2026-03-26-history-session-preview-history.md  2026-03-26-session-command-history.md  2026-03-26-session-task-system-history.md  2026-03-26-timeline-auto-scroll-fix-history.md  2026-03-26-tui-markdown-lite-status-history.md  2026-03-27-deepcode-system-prompt-history.md  2026-03-27-layered-context-history.md  2026-03-27-skills-browser-history.md  2026-03-27-tui-ctrl-c-interruption-fix-history.md  2026-03-29-ask-user-tool-history.md
docs/plans/: 2026-03-25-deep-coder-design.md  (+34 more)
tests/: test_base_contracts.py  test_cli.py  test_config.py  test_main.py  test_packaging.py
(+102 files in other folders)
