[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-coder"
version = "0.1.0"
description = "Project-scoped coding TUI powered by DeepSeek."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "openai",
    "rich",
    "textual",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
deepcode = "deep_coder.cli:main"

[tool.setuptools.packages.find]
include = ["deep_coder*"]
